
Package: R.utils
================

Version: 1.32.0 [2014-05-01]
o Added captureOutput() which is much faster than capture.output()
  for large outputs.
o use() now installs missing packages from all set repositories (as before)
  and uses the mainstream (CRAN and BioC) ones as fall backs.
o Added withRepos() for installing/updating packages using a set of
  temporarily set repositories.  It is possible to specify repositories
  by names, which are then selected from a set of known repositories,
  e.g. withRepos(install.packages("edgeR"), repos="[[BioC]]").
o Added withOptions() for evaluating an expression with a set of
  options temporarily set.
o Renamed evalCapture() to withCapture() and evalWithTimeout() and
  withTimeout().  The old name is kept for backward compatibility,
  but will eventually be deprecated.


Version: 1.31.1 [2014-04-29]
o ROBUSTNESS: Now use("<repos>::<pkg>") will detect when a repository
  is unknown and give an informative error message on how to update
  option 'repos'.


Version: 1.31.0 [2014-04-26]
o Added assignment operator %<-% for delayed assignments.
o Added option "evalCapture/newline".


Version: 1.30.7 [2014-04-26]
o Added argument 'xtrim' to draw() for density object.
o CLEANUP: createLink(..., skip=TRUE) no longer warns if the link file
  was skipped.  Now it only warns if the skipped link file links to a
  different file than the intended target file.
o CLEANUP: Dropping '::' in calls where possible.


Version: 1.30.6 [2014-04-24]
o Added argument 'newline' to evalCapture().


Version: 1.30.5 [2014-04-22]
o Added argument 'substitute' to evalCapture() for substituting
  symbols "on the fly" in the expression before it is evaluated.


Version: 1.30.4 [2014-04-18]
o Added argument 'modifiedOnly' to sourceDirectory(), which was
  previously passed via '...' to sourceTo(), and it now defaults
  to TRUE.


Version: 1.30.3 [2014-04-15]
o BUG FIX: use() would not install package dependencies.


Version: 1.30.2 [2014-04-08]